@@ -1,5 +1,9 @@
 Release 2.1 (SNAPSHOT)
 
+New Features
+  * The !N history recall now allows negative values, so "!-2" means
+    you want to edit query you executed two queries prior.
+
 Bug Fixes
   * The visual timer is better about clearing itself before results are
     displayed
